# filecherry

./: .gitignore  DEPLOYMENT.md  QUICKSTART.txt  README.md  ROADMAP.md  SETUP.md  cli.js  package-lock.json  package.json  vercel.json
filecherry-site/: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  README.md  app.js  index.html  package.json  server.js  setup.sh
outputs/: cherry-1761348752846-d02mckmjf-spec.json
outputs/go-desktop-demo/: README.md
projects/drafts/demo-app/: README.md  go.mod  main.go
projects/drafts/filecherry-desktop/: README.md  go.mod  main.go
projects/drafts/instant-demo/: README.md
projects/drafts/pixel-studio/: PROMPT.md  README.md  index.html
projects/drafts/simple-breathe/: README.md  index.html
projects/drafts/test-fireproof/: README.md  main.go
projects/drafts/test-static/: .cursorrules  README.md  index.html
projects/finished/breathe-easy/: .cursorrules  .gitignore  PROMPT.md  README.md  package-lock.json  package.json
projects/finished/go-desktop-demo/: .cursorrules  PROMPT.md  README.md  go.mod  main.go  theme.go  widgets.go
templates/bun-hono/: README.md  package.json
templates/go-fyne/: README.md  go.mod  main.go
templates/go-gin/: .gitignore  go.mod  main.go
templates/rust-axum/: Cargo.toml  README.md
templates/static-html/: README.md  index.html
templates/tauri-react/src-tauri/: Cargo.toml  tauri.conf.json
templates/tauri-react/src-tauri/src/: main.rs
website/: FILE-INDEX.md  PROJECT-SUMMARY.md  VISUAL-OVERVIEW.md  app.js  index.html  package-lock.json  package.json  server.js
(+41 files in other folders)
