[package]
name = "{{PROJECT_SLUG}}"
version = "0.1.0"
description = "{{PROJECT_NAME}} - A tiny desktop app"
authors = ["TinyApp Factory"]
license = "MIT"
repository = ""
default-run = "{{PROJECT_SLUG}}"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
